force-app/main/default/objects/ProductionLot__c/ProductionLot__c.object-meta.xml
<CustomObject>
    <label>Production Lot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Production Lot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>