force-app/main/default/objects/ProductionLot__c/fields/DispatchedQuantity__c.field-meta.xml
<CustomField>
    <fullName>DispatchedQuantity__c</fullName>
    <label>Shipped (t)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>