force-app/main/default/objects/ProductionLot__c/fields/ITE_Number__c.field-meta.xml
<CustomField>
    <fullName>ITE_Number__c</fullName>
    <label>ITE_Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>