force-app/main/default/objects/ProductionLot__c/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <formula>OrderItem__r.ITENumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITE Number</label>
    <type>Text</type>
</CustomField>