force-app/main/default/objects/ProductionLot__c/fields/LotDate__c.field-meta.xml
<CustomField>
    <fullName>LotDate__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>