force-app/main/default/objects/ProductionLot__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Production Lots</relationshipLabel>
    <relationshipName>Production_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>