force-app/main/default/objects/ProductionLot__c/fields/OrderItemGeneral__c.field-meta.xml
<CustomField>
    <fullName>OrderItemGeneral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item: General Info</label>
    <referenceTo>OrderItemGeneral__c</referenceTo>
    <relationshipLabel>Production Lots</relationshipLabel>
    <relationshipName>Production_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>