force-app/main/default/objects/ProductionLot__c/fields/ProducedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProducedQuantity__c</fullName>
    <label>Produced (t)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>