force-app/main/default/objects/ProductionLot__c/fields/ProdWeek__c.field-meta.xml
<CustomField>
    <fullName>ProdWeek__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdWeek</label>
    <referenceTo>ProdWeeksH__c</referenceTo>
    <relationshipLabel>Production Lots</relationshipLabel>
    <relationshipName>Production_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>