force-app/main/default/objects/ProductionLot__c/fields/ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantity__c</fullName>
    <label>Delivered (t)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>